# light-reader

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION_PLAN.md  README.md  SPEC.md  index.html  tauri.conf.json  test_quick_xml.rs
.cargo/: config.toml
.github/workflows/: release.yml
capabilities/: default.json
design/: 全部页.md
docs/: code-optimization-plan-2026-07.md  implementation-steps-2026-07.md  next.md  reading-statistics-spec.md  refactor-plan.md  sqlite-storage-spec.md  桌面电子书阅读器完整PRD.md
docs/design/: drop-overlay-preview.html  statistic-page-preview.html  statistic-page-v2.html  tag-editor-preview.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: global.css  main.tsx
specs/: SPEC.md  SPEC_4_ADDENDUM_TWO_PAGE_LIBRARY_READER_UX.md
specs/UI/: Phase 1.md
specs/mockups/: 1-library.html  2-loading.html  3-reader.html
src/: app.rs  bootstrap.rs  main.rs  parser.rs
src-tauri/capabilities/: default.json
src/app/: actions.rs  compat.rs  controller.rs  mod.rs  reader.rs  reducer.rs
src/domain/: app_error.rs  app_state.rs  book.rs  book_assets.rs  book_format.rs  book_load_info.rs  book_metadata.rs  bookmark.rs  chapter.rs  chapter_block.rs  chapter_builder.rs  core_state.rs  database_config.rs  enums.rs  library_item.rs  library_view_state.rs  mod.rs  paragraph.rs  paragraph_kind.rs  reader_anchor.rs  reader_settings.rs  reading_aggregates.rs  reading_mode.rs  reading_progress.rs  reading_session.rs  recent_book_item.rs  search_enums.rs  search_query.rs  search_result.rs  search_state.rs  session_state.rs  tag_group.rs  theme_kind.rs  toc_item.rs  tts_state.rs  ui_state.rs
src/parser/: epub_assets.rs  opf_utils.rs
src/services/: asset_service.rs  asset_service_impl.rs  library_service.rs  library_service_impl.rs  mod.rs  reader_service_impl.rs  settings_service.rs  settings_service_impl.rs
src/storage/: bookmark_store.rs  factory.rs  library_store.rs  mod.rs  paths.rs  traits.rs  (+4 more)
(+147 files in other folders)
