[package]
name = "reader-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reader-demo"
path = "src/main.rs"



[dependencies]
zip = "0.6.6"
eframe = "0.33.3"
rfd = "0.17.2"
quick-xml = "0.36.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
