[package]
name = "reader-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reader-demo"
path = "src/main.rs"



[dependencies]
zip = "0.6.6"
eframe = "0.33.3"
rfd = "0.17.2"
quick-xml = "0.36.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
image = "0.25"
rodio = "0.19"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[features]
tts-aliyun = []

[dev-dependencies]
tempfile = "3"
