[package]
name = "light-reader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "light-reader"
path = "src/main.rs"



[dependencies]
zip = "0.6.6"
quick-xml = "0.36.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
dirs = "5.0"
rodio = "0.19"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
encoding_rs = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
tts-aliyun = []
db-postgres = []
db-mysql = []

[dev-dependencies]
tempfile = "3"
